Issues #21, 23, 24, 25, and 26, added form labels, changed label styling to replace h3, and added input type and id to text areas

--- a/ai-helper/src/index.css
+++ b/ai-helper/src/index.css
@@ -61,12 +61,16 @@ form {
   width: 50%;
   align-items: center;
   border: 1px solid black;
-  
   margin-bottom: 40px;
 }
 
 .input { 
   padding-right: 40px;
+}
+
+.input label {
+  font-size: 1.17em;
+  font-weight: bold;
 }
 
 textarea {
