#54, Alison, Revised footer styles after list became shorter

--- a/ai-helper/src/index.css
+++ b/ai-helper/src/index.css
@@ -239,7 +239,6 @@ textarea {
 .footer {
   width: 100%;
   padding: 20px 0;
-  justify-content: center;
   background-color: black;
   border-top: .5px solid lightgray;
 }
@@ -247,7 +246,7 @@ textarea {
 .footer a{
   color: white;
   display: flex;
-  margin: 16px 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -260,10 +259,7 @@ textarea {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .footer ul {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 60px;
-    width: 50%;
+    gap: 2em;
   }
 
   .clear-btn {
@@ -302,19 +298,8 @@ textarea {
     display: flex;  
   }
 
-  .footer a{
-    width: 20%;
-  }
-  
   .footer ul {
-    display: flex;
-    flex-wrap: wrap;
-    width: 20%;
-    list-style: none;
+    margin: 0 0 0 4em;
   }
-  
-  ul.dev {
-    width: 40%;
-    column-gap: 60px;
-  }
+
 }
