--- a/ai-helper/src/index.css
+++ b/ai-helper/src/index.css
@@ -46,6 +46,7 @@ h2 {
 
 p {
   text-align: left;
+  font-size: 16px;
 }
 
 .date {
@@ -55,7 +56,7 @@ p {
 .note {
   font-style: italic;
   margin-bottom: 0.5em;
-  font-size: .9em;
+  font-size: 16px;
 }
 
 .emphasis {
@@ -120,6 +121,7 @@ textarea {
   color: #a0a0a0;
   background-color: #2b2b2b;
   padding: 1em;
+  font-size: 16px;
 }
 
 .input-error {
@@ -285,6 +287,14 @@ textarea {
     gap: 2em;
     width: 1150px;
   }
+
+  p {
+    font-size: 1em;
+  }
+
+  .note {
+    font-size: .9em;
+  }
   
   .input-form {
     width: 50%;
@@ -295,9 +305,13 @@ textarea {
     padding-left: 0px;
   }
 
+  textarea {
+    font-family: 1em;
+  }
+
   .result {
     width: 50%;
-    height: 760px;
+    height: 865px;
     padding-top: 0;
   }
 
